--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="https://www.fesc.edu.co/portal/images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="https://www.fesc.edu.co/portal/images/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="https://www.fesc.edu.co/portal/images/favicon.ico" />
+    <meta name="theme-color" content="#666666" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>fesc-biblioteca</title>
+    <title>FESC - Biblioteca</title>
+    <meta name="description" content="Sistema de Biblioteca de la Fundación de Estudios Superiores Comfanorte" />
   </head>
   <body>
     <div id="root"></div>
